--- a/index.html
+++ b/index.html
@@ -15,6 +15,18 @@
 </div>
 </header>
 
+<main>
+
+    <div class="main-container1">
+        <h1 class="container1-h1">65% OFF</h1>
+        <p class="container1-p1">OUR HOLIDAY DEALS ARE BETTER</p>
+        <h3 class="container1-h3">ALL CATEGORIES</h3>
+        <img src="resources/New Year Photo.png" alt="" class="container1-img1">
+    </div>
+
+
+</main>
+
 
 
 
