--- a/index.html
+++ b/index.html
@@ -16,13 +16,44 @@
 </header>
 
 <main>
-
+<section class="section1">
     <div class="main-container1">
         <h1 class="container1-h1">65% OFF</h1>
         <p class="container1-p1">OUR HOLIDAY DEALS ARE BETTER</p>
         <h3 class="container1-h3">ALL CATEGORIES</h3>
         <img src="resources/New Year Photo.png" alt="" class="container1-img1">
     </div>
+</section>
+
+
+
+<section class="section2">
+
+    <div class="container2">
+
+        <h1 class="container2-h1">Welcome to midnight party</h1>
+        <p class="container2-p1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        <button>Join Now</button>
+
+    </div>
+
+
+
+</section>
+
+<section class="section3">
+<div class="container3">
+    <p><span>Place:</span>  New Park Hotel<br><br>
+    <span>Date:</span>  31 December Night 2023<br><br>
+      <span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+      <button id="button2">JOIN NOW</button>
+    
+    </div>
+</section>
+
+
+
+
 
 
 </main>
