--- a/index.html
+++ b/index.html
@@ -1,70 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<header>
-    <div class="head-contain">
-    <h5 id="header-title">Happy New Year</h5>
-    <h1 id="header-title-head">New Year Party Celebration</h1>
-</div>
-</header>
+    <header>
+        <div class="head-contain">
+            <h5 id="header-title">Happy New Year</h5>
+            <h1 id="header-title-head">New Year Party Celebration</h1>
+        </div>
+    </header>
 
-<main>
-<section class="section1">
-    <div class="main-container1">
-        <h1 class="container1-h1">65% OFF</h1>
-        <p class="container1-p1">OUR HOLIDAY DEALS ARE BETTER</p>
-        <h3 class="container1-h3">ALL CATEGORIES</h3>
-        <img src="resources/New Year Photo.png" alt="" class="container1-img1">
-    </div>
-</section>
-
-
-
-<section class="section2">
-
-    <div class="container2">
-
-        <h1 class="container2-h1">Welcome to midnight party</h1>
-        <p class="container2-p1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
-        <button>Join Now</button>
-
-    </div>
+    <main>
+        <section class="section1">
+            <div class="main-container1">
+                <h1 class="container1-h1">65% OFF</h1>
+                <p class="container1-p1">OUR HOLIDAY DEALS ARE BETTER</p>
+                <h3 class="container1-h3">ALL CATEGORIES</h3>
+                <img src="resources/New Year Photo.png" alt="" class="container1-img1">
+            </div>
+        </section>
 
 
 
-</section>
+        <section class="section2">
 
-<section class="section3">
-<div class="container3">
-    <p><span>Place:</span>  New Park Hotel<br><br>
-    <span>Date:</span>  31 December Night 2023<br><br>
-      <span>Time:</span> Evening 7.30 pm to 12.30 am</p>
-      <button id="button2">JOIN NOW</button>
-    
-    </div>
-</section>
+            <div class="container2">
+                <div class="container2-part1">
+                    <h1 class="container2-h1">Welcome to midnight party</h1>
+                    <p class="container2-p1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    <button>Join Now</button>
 
-
-
-
-
-
-</main>
+                </div>
+                <div class="container2-part2">
+                    <img src="resources/Group 70.png" alt="" id="container2-img">
+                </div>
+            </div>
 
 
 
+        </section>
+
+        <section class="section3">
+            <div class="container3">
+                <p><span>Place:</span> New Park Hotel<br><br>
+                    <span>Date:</span> 31 December Night 2023<br><br>
+                    <span>Time:</span> Evening 7.30 pm to 12.30 am
+                </p>
+                <button id="button2">JOIN NOW</button>
+
+            </div>
+        </section>
+
+        <section class="section4">
+
+
+            <div class="container4">
+                <div class="part1">
+                    <p class="container4-p1">NEW BEST OFFER</p>
+                    <p class="container4-p2">Coming Soon</p>
+                    <p class="container4-p3">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+
+                </div>
+
+                <div class="part2">
+                    <div class="container4-img">
+                    <img src="resources/Ellipse 1.png" alt="" class="conatiner4-img1">
+                </div>
+                </div>
+                <div class="part3">
+
+                    <p class="container4-p4">2024</p>
+                    <p class="container4-p5">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+                    <img src="resources/Group 96.png" alt="" class="container4-img2">
+                </div>
+            </div>
+
+
+        </section>
+
+        <section class="section5">
+
+            <p class="section5-p1">WHAT IS FUNCTIONAL</p>
+            <h1 class="section5-h1"><span>Holidays</span> Sale 50%</h1>
+            <p class="section5-p2">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+                molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+
+
+
+        </section>
 
 
 
 
 
-    
+
+    </main>
+
+
+
+
+
+
+
+
+
 </body>
+
 </html>
