--- a/index.html
+++ b/index.html
@@ -120,6 +120,18 @@
                 <img id="c-7-img1" src="resources/Group 75.png" alt="">
 
 
+           
+
+
+        </section>
+
+
+        <section class="section8">
+
+            <div class="container8">
+                <p class="best-gift">THE BEST GIFTS</p>
+                <h2 class="c8-h2">Our Awesome Portfolio</h2>
+                <p class="c8-des">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
             </div>
 
 
