--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
 
 
             <div class="s9-container1">
-                <div class="s9-container1-img1"><img src="resources/Rectangle 3.png" alt=""></div>
-                <div class="s9-container1-img1"><img src="resources/Rectangle 4.png" alt=""></div>
-                <div class="s9-container1-img3"><img src="resources/Rectangle 5.png" alt=""></div>
+                <div ><img class="s9-container1-img1" src="resources/Rectangle 3.png" alt=""></div>
+                <div ><img class="s9-container1-img1" src="resources/Rectangle 4.png" alt=""></div>
+                <div ><img class="s9-container1-img3" src="resources/Rectangle 5.png" alt=""></div>
 
             </div>
             <div class="s9-container2">
 
-                <div class="s9-container2-img4"><img src="resources/Rectangle 6.png" alt=""></div>
-                <div class="s9-container2-img5"><img src="resources/Rectangle 7.png" alt=""></div>
-                <div class="s9-container2-img6"><img src="resources/Rectangle 8.png" alt=""></div>
+                <div ><img class="s9-container2-img4" src="resources/Rectangle 6.png" alt=""></div>
+                <div><img class="s9-container2-img5" src="resources/Rectangle 7.png" alt=""></div>
+                <div><img  class="s9-container2-img6" src="resources/Rectangle 8.png" alt=""></div>
 
 
             </div>
