--- a/index.html
+++ b/index.html
@@ -160,6 +160,37 @@
         </section>
 
 
+        <section class="section10">
+
+            <div class="container10">
+                <div class="c10-img1">
+                    <img src="resources/Group 61.png" alt="">
+                </div>
+                <div class="c10-h2">Subscribe Newsletter</div>
+                <div class="c10-p1">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </div>
+                <div class="c10-form">
+
+                    <form >
+
+                        <input type="email" name="" id="email-box" placeholder="user@gmail.com">
+                        <input type="button" value="Subscribe" id="email-button">
+
+
+                    </form>
+
+
+
+                </div>
+
+
+
+            </div>
+
+
+
+        </section>
+
+
 
 
 
